Subtle css fix to avoid weird horizontal scroll space in some window sizes on some browsers.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -127,22 +127,26 @@ a, img a {
 @-moz-keyframes spin {
   0% {
     -moz-transform: rotate(0deg); }
+
   100% {
     -moz-transform: rotate(359deg); } }
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg); }
+
   100% {
     -webkit-transform: rotate(359deg); } }
 @-o-keyframes spin {
   0% {
     -o-transform: rotate(0deg); }
+
   100% {
     -o-transform: rotate(359deg); } }
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg); }
+
   100% {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg); } }
@@ -1804,7 +1808,8 @@ section#start {
     height: auto;
     left: 0;
     position: absolute;
-    top: 50%; }
+    top: 50%;
+    max-width: 100%; }
   section#start .signal {
     background: url(../images/signal.png) no-repeat center 15%;
     background-size: auto 85%;
@@ -2057,7 +2062,7 @@ section#registration {
         width: 38%; }
         section#registration .table ul li:before {
           font-family: "fontAwesome";
-          content: "";
+          content: "\f00c";
           color: #e1483f;
           font-size: 17px;
           left: -28px;
