--- a/source/stylesheets/_start.sass
+++ b/source/stylesheets/_start.sass
@@ -22,8 +22,7 @@ section#start
     left: 0
     position: absolute    
     top: 50%
-    // max-width: 100%
-    // height: auto
+    max-width: 100%
 
 
   .signal
